added js and css files. Added names and pics of astros

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <title>Space People</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
     <script src="main.js"></script>
 </head>
 <body>
-    <button type="button">Clickity it</button>
-    
+    <div id="oleg"></div>
+    <div id="david"></div>
+    <div id="anne"></div>
+
+    <!--<div id="astro-pics">
+        <img id="oleg" src="https://www.nasa.gov/sites/default/files/styles/946xvariable_height/public/jsc2014e088156.jpg?itok=zDabZ-ok" alt="Oleg Kononenko" width="200" height="200">
+        <img id="david" src="http://www.asc-csa.gc.ca/images/recherche/tiles/5f594103-dcf2-4e1d-bf95-b0bd43e9f6f1.jpg" alt="David Saint-Jacques" width="200" height="200">
+        <img id="anne" src="http://www.spacefacts.de/bios/portraits/astronauts/mcclain_anne.jpg" alt="Anne McClain" width="200" height="200">
+    </div>-->
+
+    <div id="astro-info">
+            <div id="space"></div>
 </body>
 </html>
