--- a/practice.html
+++ b/practice.html
@@ -30,7 +30,7 @@
     <div id="astro-info">
             <div id="space"></div>
     <script>
-        fetch('http://api.open-notify.org/astros.json').then(response => {
+        fetch('http://www.howmanypeopleareinspacerightnow.com/peopleinspace.json').then(response => {
             return response.json();
         }).then(data => {
                 console.log(data);
