Fixed issue regarding null element

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Space People</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 </head>
 
 <body>
     <div id="oleg"></div>
     <div id="david"></div>
     <div id="anne"></div>
-
+    
     <div id="astro-info">
-            <div id="space"></div>
+    <div id="space"></div>
 </body>
 </html>
