--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 
 <body>
-    <div id="oleg"></div>
-    <div id="david"></div>
-    <div id="anne"></div>
-    
-    <div id="astro-info">
-    <div id="space"></div>
+    <div id="astros">
+        <div id="oleg">
+            <div id="olegPic"></div>
+            <div id="olegInfo"></div>
+        </div>
+
+        <div id="david"></div>
+            <div id="davidPic"></div>
+            <div id="davidInfo"></div>
+        <div id="anne"></div>
+    </div>
 </body>
 </html>
