--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Astronauts in Space</h1>
     <div id="astros">
         <div id="oleg">
             <div id="olegPic"></div>
