added anne's section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <div id="david"></div>
             <div id="davidPic"></div>
             <div id="davidInfo"></div>
+
         <div id="anne"></div>
+            <div id="annePic"></div>
+            <div id="anneInfo"></div>
     </div>
 </body>
 </html>
