--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div id="astros">
         <div id="oleg">
             <div id="olegPic"></div>
-            <div id="olegInfo"></div>
+            <div id="olegInfo">
+                <h2>Name:</h2>
+            </div>
         </div>
 
         <div id="david"></div>
