finished displaying astro info and added background

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Astronauts in Space</h1>
+    <h1 id="header">Astronauts in Space</h1>
     <div id="astros">
         <div id="oleg">
             <div id="olegPic"></div>
@@ -18,13 +18,19 @@
             </div>
         </div>
 
-        <div id="david"></div>
+        <div id="david">
             <div id="davidPic"></div>
-            <div id="davidInfo"></div>
+            <div id="davidInfo">
+                <h2>Name:</h2>
+            </div>
+        </div>
 
-        <div id="anne"></div>
+        <div id="anne">
             <div id="annePic"></div>
-            <div id="anneInfo"></div>
+            <div id="anneInfo">
+                <h2>Name:</h2>
+            </div>
+        </div>
     </div>
 </body>
 </html>
